--- a/Pickup_Comps_Inner/Dataframes/final_python.ipynb
+++ b/Pickup_Comps_Inner/Dataframes/final_python.ipynb
@@ -12,6 +12,9 @@
     "_path = \"..//CSV_Data//Big_Boy.csv\"\n",
     "basketball = pd.read_csv(_path)\n",
     "\n",
+    "#imports \n",
+    "\n",
+    "#All the stats were looking at\n",
     "headers = ['Height', '%AST', '%OREB', '%DREB', '%STL', '%BLK', 'FREQ_6', 'Diff%_6', 'FREQ_15', 'Diff%_15', 'Freq_Handoff_Off', 'eFG%_Handoff_Off', 'Freq_Iso_Def', 'eFG%_Iso_Def', 'Freq_Iso_Off', 'eFG%_Iso_Off', 'Freq_OffScreen_Off', 'eFG%_OffScreen_Off', 'Freq_P&R_Handler_Off', 'eFG%_P&R_Handler_Off', 'Freq_P&R_Man_Off', 'eFG%_P&R_Man_Off', 'Freq_Postup_Off', 'eFG%_Postup_Off', 'Freq_Putbacks_Off', 'eFG%_Putbacks_Off', 'Freq_Spotup_Off', 'eFG%_Spotup_Off', 'Freq_Tight', 'eFG%_Tight', 'Freq_Open', 'eFG%_Open', 'FGA_Catch_And_Shoot', 'EFG%_Catch_And_Shoot', 'FGA_Pull_Up', 'EFG%_Pull_Up', 'DRIVES_Drives', 'FG%_Drives']\n",
     "headers_with_player = ['Player', 'Height', '%AST', '%OREB', '%DREB', '%STL', '%BLK', 'FREQ_6', 'Diff%_6', 'FREQ_15', 'Diff%_15', 'Freq_Handoff_Off', 'eFG%_Handoff_Off', 'Freq_Iso_Def', 'eFG%_Iso_Def', 'Freq_Iso_Off', 'eFG%_Iso_Off', 'Freq_OffScreen_Off', 'eFG%_OffScreen_Off', 'Freq_P&R_Handler_Off', 'eFG%_P&R_Handler_Off', 'Freq_P&R_Man_Off', 'eFG%_P&R_Man_Off', 'Freq_Postup_Off', 'eFG%_Postup_Off', 'Freq_Putbacks_Off', 'eFG%_Putbacks_Off', 'Freq_Spotup_Off', 'eFG%_Spotup_Off', 'Freq_Tight', 'eFG%_Tight', 'Freq_Open', 'eFG%_Open', 'FGA_Catch_And_Shoot', 'EFG%_Catch_And_Shoot', 'FGA_Pull_Up', 'EFG%_Pull_Up', 'DRIVES_Drives', 'FG%_Drives']\n"
    ]
@@ -114,7 +117,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#converting heights to ints\n",
     "for i in range(0,351):\n",
     "    if basketball['Height'].iloc[i] == '5-10':\n",
     "        basketball['Height'].iloc[i] = basketball['Height'].iloc[i].replace('5-10', '70')\n",
@@ -168,7 +171,7 @@
    "outputs": [],
    "source": [
     "counter_dic = {}\n",
-    "\n",
+    "# counting all the zeros for each stat (players that didn't qualify)\n",
     "for a in range(0,38):\n",
     "    counter = 0\n",
     "    for b in range(0,351):\n",
@@ -183,6 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#turning all the zeros to 100s for stats where the bigger number is actually the worst\n",
     "basketball.loc[basketball[\"Diff%_6\"] == 0.0, \"Diff%_6\"] = 100.0\n",
     "basketball.loc[basketball[\"Diff%_15\"] == 0.0, \"Diff%_15\"] = 100.0\n",
     "basketball.loc[basketball[\"eFG%_Iso_Def\"] == 0.0, \"eFG%_Iso_Def\"] = 100.0"
@@ -245,17 +249,23 @@
     "\n",
     "the_master_dic = {}\n",
     "for j in range(0,38):\n",
-    "    if headers[j] == 'Diff%_6' or headers[j] == 'Diff%_15' or headers[j] == 'eFG%_Iso_Def':\n",
+    "    #sorting in the opposite order for stats where the bigger number is actually worst\n",
+    "    if headers[j] == 'Diff%_6' or headers[j] == 'Diff%_15' or headers[j] == 'eFG%_Iso_Def': \n",
     "        df = basketball.sort_values(headers[j], ascending=False)\n",
+    "    #sorting the dataframe by a specific stat from smallest to biggest\n",
     "    else:\n",
     "        df = basketball.sort_values(headers[j], ascending=True)\n",
+    "    #for all the people that don't qualify, we are turning all there percentiles to the same number\n",
     "    for i in range(0, counter_dic[headers[j]]):\n",
+    "        #that number is the average of the number of people who don't qualify\n",
     "        the_master_dic[str(df['Player'].iloc[i])].append([headers[j], round(((counter_dic[headers[j]]/2)/350)*100)])\n",
     "    for i in range(counter_dic[headers[j]],351):\n",
+    "        #for each players key, add a list of the stat and that players precentile in the stat\n",
     "        if headers[j] != 'Height':            \n",
     "            the_master_dic[str(df['Player'].iloc[i])].append([headers[j], round((i/350)*100)])\n",
+    "        #for heights, just add there height\n",
     "        else:\n",
-    "            the_master_dic[str(basketball['Player'].iloc[i])] = []\n",
+    "            the_master_dic[str(basketball['Player'].iloc[i])] = [] #creating the dictionary with every players name as the key\n",
     "            the_master_dic[str(basketball['Player'].iloc[i])].append([headers[j], int(float(basketball['Height'].iloc[i]))])\n",
     "\n"
    ]
@@ -276,6 +286,7 @@
    "source": [
     "the_master_list = []\n",
     "\n",
+    "#this sorts the master dic into a format that we can then use savetxt to create a new csv only of the players precentiles for the stats we want\n",
     "for k in range(0,351):\n",
     "    the_master_list.append([str(basketball['Player'].iloc[k])])\n",
     "    for l in range (0,38):\n",
@@ -286,7 +297,8 @@
     "    the_real_master_list.append(the_master_list[m])\n",
     "print(the_real_master_list)\n",
     "\n",
-    "np.savetxt(\"Final_Final_Player_Precentile.csv\", the_real_master_list, delimiter=\", \", fmt=\"% s\")"
+    "np.savetxt(\"Final_Final_Player_Precentile.csv\", the_real_master_list, delimiter=\", \", fmt=\"% s\")\n",
+    "#this csv was then turned into a json file"
    ]
   }
  ],
